--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 <body>
 
   <script type="text/x-handlebars">
-    <h2>Welcome to Ember.js</h2>
+    <h2>MapAsh JS</h2>
+    <span>Maps with d3 and Ember</span>
 
     {{outlet}}
   </script>
 
-  <script type="text/x-handlebars" data-template-name="index">
-    <ul>
-    {{#each item in model}}
-      <li>{{item}}</li>
-    {{/each}}
-    </ul>
+  <script type='text/x-handlebars' data-template-name="index">
+    {{view App.Map geoDataBinding="App.usaStatesGeoData"}}
+    
   </script>
-
+  
+  <script src="js/us-states.js"></script>
   <script src="js/libs/jquery-1.9.1.js"></script>
   <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
   <script src="js/libs/ember-1.0.0-rc.3.js"></script>
+  <script src="js/libs/d3.js"></script>
+  <script src="js/libs/d3.geo.js"></script>
   <script src="js/app.js"></script>
 
 </body>
