--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Map Ash JS</title>
+<title>mapash js</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
       <div class="navbar navbar-inverse">
         <div class="navbar-inner">
           <div class="container">
-            <a class="brand" href="#">Map Ash JS</a>
+            <a class="brand" href="#">mapash js</a>
             <ul class="nav pull-right">
               <li>
                 <a href="/" class="brand sub-brand">Maps with d3.js and Ember.js</a>
@@ -30,7 +30,6 @@
 
   <script type='text/x-handlebars' data-template-name="index">
     {{view App.Map geoDataBinding="App.usStates"}}
-    
   </script>
   
   <script src="js/us-states.js"></script>
