--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <script type='text/x-handlebars' data-template-name="index">
       <div id="map">
-        {{view App.Map geoDataBinding="App.usStates"}}
+        {{ view App.Map geoDataBinding="App.usStates"}}
       </div>
       <div id="sidebar">
         {{view App.Sidebar}}
@@ -46,8 +46,10 @@
   <script src="js/libs/jquery-1.9.1.js"></script>
   <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
   <script src="js/libs/ember-1.0.0-rc.3.js"></script>
+  <script src="js/libs/ember-data-latest.min.js"></script>
   <script src="js/libs/d3.js"></script>
   <script src="js/libs/d3.geo.js"></script>
+  <script src="js/mousewheel.js"></script>
   <script src="js/app.js"></script>
 
 </body>
