--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <script type='text/x-handlebars' data-template-name="index">
       <div id="map">
-        {{ view App.Map geoDataBinding="App.usStates"}}
+        {{ view App.Map }}
       </div>
       <div id="sidebar">
         {{view App.Sidebar}}
