--- a/index.html
+++ b/index.html
@@ -1,44 +1,22 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>mapash js</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/normalize.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>ArcGIS Composer</title>
+  <link rel="stylesheet" href="css/arcgis.css">
   <link rel="stylesheet" href="css/style.css">
+  <!--[if IE]>
+  <script src="js/libs/ie.js"></script>
+  <![endif]-->
 </head>
 <body>
-
-  <script type="text/x-handlebars">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar navbar-inverse">
-        <div class="navbar-inner">
-          <div class="container">
-            <a class="brand" href="#">mapash js</a>
-            <ul class="nav pull-right">
-              <li>
-                <a href="/" class="brand sub-brand">Maps with d3.js and Ember.js</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>  
-    </div>
-
-    {{outlet}}
-  </script>
-
-  <script type='text/x-handlebars' data-template-name="index">
-    {{view App.Map geoDataBinding="App.usStates"}}
-  </script>
-  
-  <script src="js/us-states.js"></script>
-  <script src="js/libs/jquery-1.9.1.js"></script>
-  <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.3.js"></script>
+  <section id="map_app"></section>
+  <footer id="">
+  </footer>
   <script src="js/libs/d3.js"></script>
   <script src="js/libs/d3.geo.js"></script>
-  <script src="js/app.js"></script>
-
+  <script data-main="js/app.js" src="js/libs/require.js"></script>
 </body>
 </html>
+
