--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </footer>
   <script src="js/libs/d3.js"></script>
   <script src="js/libs/d3.geo.js"></script>
+  <script src="js/libs/topojson.v0.min.js"></script>
   <script data-main="js/app.js" src="js/libs/require.js"></script>
 </body>
 </html>
