new d3; projection working

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <section id="map_app"></section>
   <footer id="">
   </footer>
-  <script src="js/libs/d3.js"></script>
-  <script src="js/libs/d3.geo.js"></script>
+  <script src="js/libs/d3.v3.min.js"></script>
+  <script src="js/libs/d3.geo.projection.v0.min.js"></script>
   <script src="js/libs/topojson.v0.min.js"></script>
   <script data-main="js/app.js" src="js/libs/require.js"></script>
 </body>
