working on layer palette binding

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <footer id="">
   </footer>
   <script src="js/libs/handlebars-1.0.0-rc.3.js"></script>
+  <script src="js/libs/arcgis.js"></script>
   <script src="js/libs/d3.v3.min.js"></script>
   <script src="js/libs/d3.geo.projection.v0.min.js"></script>
   <script src="js/libs/topojson.v0.min.js"></script>
