--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>ArcGIS Composer</title>
+  <link rel="stylesheet" href="css/spectrum.css">
   <link rel="stylesheet" href="css/arcgis.css">
   <link rel="stylesheet" href="css/style.css">
   <!--[if IE]>
